feat:spuShowList页面数据展示成功

--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -46,3 +46,12 @@
 .breadcrumb-leave-active {
   position: absolute;
 }
+
+.pagination{
+  text-align: right
+}
+
+.el-pagination__sizes{
+  margin-left: 500px
+}
+
